--- a/CallExpress/pubspec.yaml
+++ b/CallExpress/pubspec.yaml
@@ -1,5 +1,9 @@
-name: flutter_auth
+name: callexpress
 description: A new Flutter project.
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,39 +18,62 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^5.7.5
-  http: ^0.12.0
-  google_maps_flutter: ^2.0.1
-  json_serializable: 3.5.1
-  geolocator: 6.2.1
+  flutter_localizations:
+    sdk: flutter
+  auto_size_text: 3.0.0
+  built_collection: 5.1.1
+  built_value: 8.1.3
+  cached_network_image: 3.1.0+1
+  cloud_firestore: 2.5.4
+  cloud_firestore_web: 2.6.8
+  firebase_auth: 3.2.0
+  firebase_core: 1.12.0
+  firebase_core_web: 1.5.4
+  flutter_html: 2.2.1
+  font_awesome_flutter: 8.11.0
+  google_fonts: 2.2.0
+  google_sign_in: 5.2.1
+  intl: 0.17.0
+  json_path: 0.2.1
+  json_serializable: 6.1.3
+  page_transition: 2.0.4
+  rxdart: 0.26.0
+  shared_preferences: 2.0.11
+  sign_in_with_apple:
+    git:
+      url: https://github.com/asmengistu/dart_packages
+      ref: ab18d53a80e0a4bb90f1ad84f37f1b408930f28d
+      path: packages/sign_in_with_apple/sign_in_with_apple/
+  timeago: 3.1.0
+  url_launcher: 6.0.15
+  webviewx: 0.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.1
-  flutter_launcher_icons: ^0.8.1
+  cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  provider: ^6.0.0
 
 dev_dependencies:
+  build_runner: 2.1.7
+  built_value_generator: 8.1.3
+
   flutter_test:
     sdk: flutter
-  pedantic: 1.9.2
-  build_runner: ^1.10.0
 
-flutter_icons:
-  android: "ic_launcher"
-  ios: true
-  image_path: "assets/icons/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -54,15 +81,21 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/fonts/
     - assets/images/
-    - assets/icons/
-    - assets/icons/logo.png
-    - map_style.json
-  #  - images/a_dot_ham.jpeg
+    - assets/videos/
+    - assets/audios/
+    - assets/lottie_animations/
+    - assets/rive_animations/
+    - assets/pdfs/
+
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
+
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
